changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Don't send empty "stats " commands.
 socket/request.c
Nicolas Weeger 2010-03-20

Add extended statistics informations: race stats, natural stats.
This enables clients to display depletion and such.
 doc/Developers/protocol
 include/newserver.h player.h
 include/shared/newclient.h README
 socket/init.c request.c
Nicolas Weeger 2010-03-20

Fix crash with "cast" command having no arguments.
Andreas Kirschbaum 2010-03-19

Cache map information.
utils/cre/
 CREArchetypePanel.cpp
 CREArchetypePanel.h
 CREMainWindow.cpp
 CREMainWindow.h
 CREMapInformationManager.h
 CREMapInformationManager.cpp
 CREMapInformation.cpp
 CREMapInformation.h
 CREResourcesWindow.cpp
 CREResourcesWindow.h
 cre.pro
Nicolas Weeger 2010-03-17

Basic settings for map cache directory, and associated dialog.
 utils/cre/cre.{cpp,pro} CRESettings.{cpp,h} CRESettingsDialog.{cpp,h}
Nicolas Weeger 2010-03-14

Add relevant debug flags to compilation.
 utils/cre/.qmake.cache
Nicolas Weeger 2010-03-14

Use archetype name instead of archetype itself. Show map name in list too.
 utils/cre/CREArchetypePanel.cpp CREMapInformation.{cpp,h} CREMapInformationManager.{cpp,h} CREMainWindow.cpp CREUtils.{cpp,h}
Nicolas Weeger 2010-03-14

Remove obsolete map fields in header.
 common/map.c
Nicolas Weeger 2010-03-14

Basic map browsing. Report archetype use in maps.
Modified files:
 utils/cre/cre.pro CREArchetypePanel.cpp CREMainWindow.{cpp,h}
New files:
 utils/cre/CREMapInformationManager.{cpp,h} CREMapInformation.{cpp,h}
Nicolas Weeger 2010-03-14

Sort alphabetically by default.