@@ -220,13 +220,10 @@ void set_up_cmd(char *buf, int len, socket_struct *ns) {
                  */
                 SockList_AddPrintf(&sl, "%dx%d", x, y);
                 /* need to update the los, else the view jumps */
-                /** @todo find or make a function to find a player from socket_struct */
-                for (pl = first_player; pl; pl = pl->next) {
-                    if (&pl->socket == ns) {
-                        update_los(pl->ob);
-                        break;
-                    }
-                }
+                pl = find_player_socket(ns);
+                if (pl)
+                  update_los(pl->ob);
+
                 /* Client and server need to resynchronize on data - treating it as
                  * a new map is best way to go.
                  */
