@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Extract function to find player from socket.
+ include/sproto.h
+ server/player.c
+ socket/request.c
+Nicolas Weeger 2010-03-20
+
 Don't send empty "stats " commands.
  socket/request.c
 Nicolas Weeger 2010-03-20
